--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,10 @@ jobs:
       with:
         python-version: '3.x'  # 选择 Python 版本
 
+    - name: Install requests library
+      run: |
+        pip install requests zipfile
+
     - name: Download File
       run: python main.py  # 这里 main.py 负责下载文件
 
