--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,6 @@ jobs:
         git config --local user.name "GitHub Action"
         git add .
         git commit -m "Downloaded file on ${{ steps.date.outputs.date }}"
+        git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/3Kmfi6HP/FortunateShabbyConferences.git
         git push
+
