--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,12 @@ jobs:
     - name: Download File
       run: python main.py  # 这里 main.py 负责下载文件
 
-    - name: Get Current Date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S')"
-
     - name: Commit and Push
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add .
-        git commit -m "Downloaded file on ${{ steps.date.outputs.date }}"
+        git commit -m "Downloaded file on, $(date "+%Y/%m/%d")"
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{github.repository}}.git
         git push
 
