--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Download and Commit
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天的0:00执行
+    - cron: '0 */6 * * *'  # 每间隔6小时执行
   workflow_dispatch:  # 允许手动触发
 
 jobs:
