--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,9 @@ jobs:
 
     - name: Commit and Push
       run: |
-        git config --local user.email "action-$(cat /dev/urandom | tr -dc 'a-z0-9' | head -c 5)@github.com"
-        git config --local user.name "GitHub Action $(cat /dev/urandom | tr -dc 'A-Za-z0-9' | head -c 5)"
+        git config --local user.email "action-$(date "+%s")@github.com"
+        git config --local user.name "GitHub Action $(date "+%s")"
         git add .
         git commit -m "Downloaded file on $(date "+%Y/%m/%d %H:%M:%S")"
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{github.repository}}.git
         git push
-
